--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "anthropic>=0.64.0",
+    "gradio>=5.44.1",
     "openai>=1.102.0",
+    "pymupdf4llm>=0.0.27",
     "python-dotenv>=1.1.1",
 ]
